--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -17,3 +17,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: test
+        run: echo test
