--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch name'
+        required: true
+        default: 'main'
 jobs:
   build:
     runs-on: ubuntu-latest
