--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -39,10 +39,12 @@ jobs:
           touch test.txt
           pwd
           ls -la
+          sleep 60
       - name: test 2
         run: | 
           ls -la
           touch test2.txt
           pwd
           ls -la
+          sleep 60
         
