--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -29,7 +29,7 @@ jobs:
       - name: test 2
         run: echo test 2
       - name: test 3
-        run: echo test 3
+        run: sleep 60
   ut:
     runs-on: ubuntu-latest
     steps:
@@ -46,5 +46,4 @@ jobs:
           touch test2.txt
           pwd
           ls -la
-          sleep 60
         
