--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -11,25 +11,21 @@ on:
         description: 'Branch name'
         required: true
         default: 'main'
+      warning_analyzer:
+        default: true
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-      - name: test
-        run: echo test
-      - name: test 1
-        run: echo test 1
-      - name: test 2
-        run: echo test 2
-      - name: test 3
-        run: sleep 60
+      - name: checkout
+        run: echo checkout
+      - name: build
+        run: echo building
+      - name: warning-analyzer
+        if: ${{ github.event.inputs.warning_analyzer }}" == true
+        run: echo checking warnings
+      - name: post-action
+        run: uploading artifacts
   ut:
     runs-on: ubuntu-latest
     steps:
