--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -12,6 +12,7 @@ on:
         required: true
         default: 'main'
       warning_analyzer:
+        required: true
         default: true
 jobs:
   build:
@@ -22,7 +23,7 @@ jobs:
       - name: build
         run: echo building
       - name: warning-analyzer
-        if: ${{ github.event.inputs.warning_analyzer }}" == true
+        if: ${{ github.event.inputs.warning_analyzer }}
         run: echo checking warnings
       - name: post-action
         run: echo uploading artifacts
