--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,6 +14,7 @@ on:
       warning_analyzer:
         required: true
         default: true
+        type: boolean
 jobs:
   build:
     runs-on: ubuntu-latest
