--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -24,7 +24,7 @@ jobs:
       - name: build
         run: echo building
       - name: warning-analyzer
-        if: github.event.inputs.warning_analyzer
+        if: $ {{ github.event.inputs.warning_analyzer == 'true'
         run: echo checking warnings
       - name: post-action
         run: echo uploading artifacts
