--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -24,7 +24,7 @@ jobs:
       - name: build
         run: echo Warning analyzer ${{ github.event.inputs.warning_analyzer }}
       - name: warning-analyzer
-        if: ${{ github.event.inputs.warning_analyzer == 'true' }}
+        if: ${{ github.event.inputs.warning_analyzer == 'true' || github.event_name != 'workflow_dispatch' }}
         run: echo checking warnings
       - name: post-action
         run: echo uploading artifacts
