--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -15,9 +15,17 @@ on:
         required: true
         default: true
         type: boolean
+defaults:
+  run:
+    shell: bash
+    working-directory: workdir
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults: # this overrides defaults at the level of workflow
+      run:
+        shell: powershell
+        working-directory: repo
     steps:
       - name: checkout
         run: echo Branch name ${{ github.event.inputs.branch }}
