--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,4 +24,50 @@ jobs:
         with:
           name: archive.zip
           path: build/libs
+  deploy-dev:
+    needs: [build-and-test]
+    if: github.ref == 'refs/heads/dev'
+    runs-on: ubuntu-latest
+    environment:
+      name: dev
+      url: https://github.com/${{ github.repository }}/releases/tag/v${{ vars.DEV_VERSION }}
+    steps:
+      - name: Download candidate artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: archive.zip
+      - name: release to dev
+        uses: softprops/action-gh-release@v0.1.15
+        with:
+          tag_name: v${{ vars.DEV_VERSION }}
+          token: ${{ secrets.DEV_TOKEN }}
+          prelease: true
+          draft:  true
+          name: dev
+          files: greetings-deploy.jar
+  deploy-prod:
+    needs: [build-and-test]
+    if: github.ref == 'refs/heads/dev'
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://github.com/${{ github.repository }}/releases/tag/v${{ vars.DEV_VERSION }}
+    steps:
+      - name: Download candidate artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: archive.zip
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.15
+        with:
+          tag_name: v${{ vars.PROD_VERSION }}
+          token: ${{ secrets.PROD_TOKEN }}
+          prelease: true
+          draft:  true
+          name: dev
+          files: greetings-deploy.jar
+         
+      
+    
+    
        
