--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -97,9 +97,9 @@ jobs:
           path: |
             - test.txt
             - test2.txt
-          key: ${{ runner-os }}-ut-${{ env.cache-name }}-${{ hashFiles(test.txt) }}
+          key: ${{ runner.os }}-ut-${{ env.cache-name }}-${{ hashFiles(test.txt) }}
           restore-keys: |
-            - ${{ runner-os }}-ut-${{ env.cache-name }}-
-            - ${{ runner-os }}-ut-
-            - ${{ runner-os }}- 
+            - ${{ runner.os }}-ut-${{ env.cache-name }}-
+            - ${{ runner.os }}-ut-
+            - ${{ runner.os }}- 
         
