--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -92,12 +92,12 @@ jobs:
       - name: Cache
         uses: actions/cache@v4.2.4
         env:
-          cache-nama: ut-cache
+          cache-name: ut-cache
         with: 
           path: |
             - test.txt
             - test2.txt
-          key: ${{ runner.os }}-ut-${{ env.cache-name }}-${{ hashFiles(**/test.txt) }}
+          key: ${{ runner.os }}-ut-${{ env.cache-name }}-${{ hashFiles('**/test.txt') }}
           restore-keys: |
             - ${{ runner.os }}-ut-${{ env.cache-name }}-
             - ${{ runner.os }}-ut-
