--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,8 +1,13 @@
-name: hello-world
-on: push
+name: print-text
+on:
+  workflow_call:
+    inputs:
+      text:
+        required: true
+        type: string
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
-        run: echo "Hello World!"
+      - name: pring text
+        run: echo ${{ inputs.text }}
