--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -16,6 +16,9 @@ on:
     #   - '**.yaml'
   pull_request:
     branches: [ main ]
+  workflow_run:
+    workflows: ["verify file"]
+    types: [completed]
   # call from another workflow
   workflow_call:
     inputs:
