--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,7 +3,11 @@ name: verify file
 on:
   push:
   pull_request:
-
+  workflow_dispatch:
+    inputs:
+      title:
+        required: true
+        type: string
 jobs:
   verify:
     name: ${{ vars.JOB_NAME }}
