--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -36,6 +36,8 @@ on:
         required: true
         default: true
         type: boolean
+permissions:
+  contents: write
 # defaults:
 #   run:
 #     shell: bash
